bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value isOverR
  if (isOverR()){
      ^BDR:7: error: not found: value isOverL
  else if (isOverL()){
           ^BDR:11: error: value isOver is not a member of StringContext
  else if (isOver"I"()){
           ^BDR:16: error: value isOver is not a member of StringContext
  else if (isOver"B"()){
           ^BDR:21: error: value isOver is not a member of StringContext
  else if (isOver"C"()){
           ^BDR:26: error: value isOver is not a member of StringContext
  else if (isOver"Z"()){
           ^BDR:29: error: value isOver is not a member of StringContext
  else if (isOver"Y"()){
           ^BDR:33: error: value isOver is not a member of StringContext
  else if (isOver"X"()){
           ^