bdr.BDR.scala.code
while (isOverMessage()) {
  readMessage()
  if (isOverR()){
    right()
  }
  
  else if (isOverL()){
    left()
  }
  
  else if (isOver"I"()){
    back()
    forward()
  }
  
  else if (isOver"B"()){
    forward()
    forward()
  }
  
  else if (isOver"C"()){
    forward()
    forward()
    forward()
  }
  else if (isOver"Z"()){
    backward()
  }
  else if (isOver"Y"()){
    backward()
    backward()
  }
  else if (isOver"X"()){
    backward()
    backward()
    backward()
  }
  
}